grammar/grammar.txt
expr    : term ((PLUS|MINUS) term)* \\ lowest priority

term    : factor ((MUL|DIV) factor)*

factor  : (PLUS|MINUS) factor
        : power

power   : atom (POW factor)*

atom    : INT|FLOAT \\ highest priority
        : LPAREN expr RPAREN
